--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <span id="element"></span>
 
                 <div class="button">
-                    <a class="btn" href='images/Resume.pdf'>Download Resume</a>
+                    <a class="btn" href='images/Resume.pdf' download>Download Resume</a>
                     <a class="btn" href='https://github.com/JhaAayush'>Visit Github</a>
                 </div>
             </div>
